package app;

public class Calculator {

    public double getTotalCarportPrice(){

        return 0;

    }

    public double getWoodLengthPrice(){
        return 0;
    }

    public double calculateWhatINeed(){
        return 0;
    }
}
