package app.persistence;

public class MaterialMapper {

    //make som cool as things

}
