-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.users
(
    user_id serial NOT NULL,
    user_name character varying NOT NULL,
    user_password character varying NOT NULL,
    user_zipcode character varying NOT NULL,
    user_role character varying NOT NULL,
    PRIMARY KEY (user_id)
    );

CREATE TABLE IF NOT EXISTS public."order"
(
    order_id serial NOT NULL,
    total_price integer NOT NULL,
    status boolean NOT NULL,
    height double precision,
    width double precision,
    length double precision,
    date date NOT NULL,
    user_id integer NOT NULL,
    PRIMARY KEY (order_id)
    );

CREATE TABLE IF NOT EXISTS public.order_item
(
    order_item_id serial NOT NULL,
    variant_id integer NOT NULL,
    request_description character varying,
    order_id integer NOT NULL,
    PRIMARY KEY (order_item_id)
    );

CREATE TABLE IF NOT EXISTS public.variant
(
    variant_id serial NOT NULL,
    material_id integer NOT NULL,
    length integer NOT NULL,
    PRIMARY KEY (variant_id)
    );

CREATE TABLE IF NOT EXISTS public.material
(
    material_id serial NOT NULL,
    type character varying NOT NULL,
    width double precision,
    heigth double precision,
    amount integer NOT NULL,
    price double precision NOT NULL,
    description character varying NOT NULL,
    unit character varying NOT NULL,
    PRIMARY KEY (material_id)
    );

ALTER TABLE IF EXISTS public."order"
    ADD FOREIGN KEY (user_id)
    REFERENCES public.users (user_id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.order_item
    ADD FOREIGN KEY (order_id)
    REFERENCES public."order" (order_id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.variant
    ADD FOREIGN KEY (variant_id)
    REFERENCES public.order_item (variant_id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.material
    ADD FOREIGN KEY (material_id)
    REFERENCES public.variant (material_id) MATCH SIMPLE
    ON UPDATE NO ACTION
       ON DELETE NO ACTION
    NOT VALID;

END;